tests/paczka1/small_fuzzy/82704189.err
Error in line 7: 8OJ S911 28,2
Error in line 8: S431 S911 90,9
